# backend/internal/router/user.go
@@ -1,32 +1,0 @@
-package router
-
-import (
-	"github.com/gin-gonic/gin"
-	"aiot-backend/internal/middleware"
-)
-
-func InitUserRouter(
-	deps RouterDeps,
-	r *gin.RouterGroup,
-) {
-	// No route group has permission
-	noAuthRouter := r.Group("/")
-	{
-		noAuthRouter.POST("/register", deps.UserHandler.Register)
-		noAuthRouter.POST("/login", deps.UserHandler.Login)
-	}
-	// Non-strict permission routing group
-	noStrictAuthRouter := r.Group("/").Use(middleware.NoStrictAuth(deps.JWT, deps.Logger))
-	{
-		noStrictAuthRouter.GET("/user", deps.UserHandler.GetProfile)
-	}
-
-	// Strict permission routing group
-	strictAuthRouter := r.Group("/").Use(middleware.StrictAuth(deps.JWT, deps.Logger))
-	{
-		strictAuthRouter.PUT("/user", deps.UserHandler.UpdateProfile)
-		strictAuthRouter.GET("/organizations", deps.UserHandler.ListMyOrganizations)
-		strictAuthRouter.POST("/auth/switch-org", deps.UserHandler.SwitchOrganization)
-	}
-}
-
